--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -12,7 +12,8 @@
     <add key="UploadFileServer" value="http://182.92.121.160:8080/edu-server/UploadFile"/>
     <!--音视频服务器(可以包含端口)-->
     <!--139.196.217.92:10554   118.184.18.254:10554-->
-    <add key="RTSPserverIP" value="182.92.121.160:10554"/>
+    <add key="RTSPserverIP" value="139.196.217.92"/>
+    <add key="RTSPserverPort" value="10554"/>
     <!--UDP端口-->
     <add key="UDPPort" value="10888"/>
     <add key="IsHuiShen" value="1"/>
