--- a/vlctest/vlctest.csproj
+++ b/vlctest/vlctest.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>vlctest</RootNamespace>
-    <AssemblyName>vlctest</AssemblyName>
+    <AssemblyName>EasyScreenLive</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -129,11 +129,11 @@
     <Compile Include="DirectShowForm.Designer.cs">
       <DependentUpon>DirectShowForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ffmpegTest.cs">
+    <Compile Include="EasyScreenLiveForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ffmpegTest.Designer.cs">
-      <DependentUpon>ffmpegTest.cs</DependentUpon>
+    <Compile Include="EasyScreenLiveForm.Designer.cs">
+      <DependentUpon>EasyScreenLiveForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -192,8 +192,8 @@
     <EmbeddedResource Include="DirectShowForm.resx">
       <DependentUpon>DirectShowForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ffmpegTest.resx">
-      <DependentUpon>ffmpegTest.cs</DependentUpon>
+    <EmbeddedResource Include="EasyScreenLiveForm.resx">
+      <DependentUpon>EasyScreenLiveForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
